    ACCEPT.
*** Improvement: Goal-columns for line movement.
*** Improvement: More Emacs-like expression movement for Lisp syntax.
** Bug fix: label panes no longer have a restrictive maximum width.
** Bug fix: ellipses with a zero radius no longer cause errors.
** Bug fix: bezier drawing in CLIM-FIG less likely to cause errors.
** Bug fix: restored somewhat working undo in CLIM-FIG.

* Changes in mcclim-0.9.5 relative to 0.9.4:
** Installation: the systems clim-listener, clim-examples,
   and clouseau can now be loaded without loading the system mcclim
   first. Users with existing McCLIM installations should use the 
   provided script:
   		./symlink-asd-files.sh /path/to/asdf-central-registry/
** New extension: tab-layout. This extension allows keeping a stack of panes 
   whose foreground pane is controlled by a tab bar. This layout can be 
   customized in backends and frame managers. For examples, see the
   gtkairo backend and the pixie frame manager.
** New extension function: SHEET-RGB-IMAGE: makes a screenshot of a sheet 
   in the CLX backend. (Supported on truecolor visuals only for now.)
** New experimental extension: tree-with-cross-edges are an extension to
   the graph formatter.
** New experimental backend: clim-graphic-forms: native widgets on Windows. 
   This backend is still very experimental (it doesn't run demos yet).
** New inspector feature: The inspector now displays more useful information
   about hash tables and generic functions.
** Specification compliance: Various layout panes no longer quite as
   aggressive at eating the space requirements of their children.
** Specification compliance: There is now a rudimentary implementation of 
   NOTIFY-USER
** Usability: Text editors and text input panes now use click-to-focus.
** Improvement: the ACCEPTING-VALUES command table was renamed to 
   ACCEPT-VALUES (as this is the name that the other clim-2 implementation 
   uses)