@@ -18,6 +18,9 @@
 ** Bug fix: ellipses with a zero radius no longer cause errors.
 ** Bug fix: bezier drawing in CLIM-FIG less likely to cause errors.
 ** Bug fix: restored somewhat working undo in CLIM-FIG.
+** Specification compliance: The :inherit-menu keyword argument to
+   DEFINE-COMMAND-TABLE and MAKE-COMMAND-TABLE is now implemented with
+   CLIM 2.2 semantics. The :keystrokes value is not handled yet.
 
 * Changes in mcclim-0.9.5 relative to 0.9.4:
 ** Installation: the systems clim-listener, clim-examples,
